--- a/DataStructure/DataStructure.csproj
+++ b/DataStructure/DataStructure.csproj
@@ -33,9 +33,9 @@
     <Compile Include="QuickSortAlgorithm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MergeSortAlgorithm.cs" />
-    <Compile Include="BubbleSort.cs" />
+    <Compile Include="BubbleSortAlgorithm.cs" />
     <Compile Include="Common.cs" />
-    <Compile Include="SelectionSort.cs" />
+    <Compile Include="SelectionSortAlgorithm.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
